# pudl-archiver

./: .codecov.yml  .env.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dataset_doi.yaml  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  scrape_everything.sh  scrapy.cfg  setup.py  tox.ini
.checkpoints/: sec10k.json
.github/: actionlint.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: create-new-archiver.md  early-final-release-template.md  early_release_checker.md  monthly-archive-update.md
.github/workflows/: create-archiver.yml  early_final_release_checker.yml  initialize-archiver-large.yml  initialize-archiver.yml  publish-fsspec-archive.yml  publish-or-retry-fsspec-archive.yml  pytest.yml  run-archiver-cambium.yml  run-archiver-large.yml  run-archiver.yml  run-fsspec-archiver.yml  run-pytest.yml  run-zenodo-archiver.yml  test-epacems.yml  tox-pytest.yml  update-lockfiles.yml
devtools/: New Zenodo.postman_collection.json  Zenodo.postman_collection.json
pudl/: dummy.py  helpers.py  items.py  pipelines.py  settings.py
pudl/spiders/: cems.py  census.py  eia860.py  eia861.py  eia923.py  epaipm.py  ferc1.py  ferc714.py  ipm.py
pudl/tests/: factories.py  test_eia860.py  test_eia923.py  test_epacems.py  test_ferc1.py  test_ipm.py  test_zen_storage.py
pudl/tests/data/: eia860.html  eia923.html  ipm.html
pudl/zen_storage/: core.py
pudl_scrapers/: items.py  settings.py
pudl_scrapers/spiders/: census.py  censusdp1tract.py  eia860.py  eia860m.py  eia861.py  eia923.py  eipinfrastructure.py  epa_eia_crosswalk.py  epaipm.py  ferc1.py  ferc714.py  iblnisoqueues.py
pudl_scrapers/tests/: factories.py  test_eia860m.py  test_eia861.py  test_epacems.py  test_epaipm.py  test_ferc1.py
pudl_scrapers/tests/data/: eia860.html  eia860m.html  eia861.html  eia923.html
scrapers/: items.py
scrapers/spiders/: eia860.py
scrapers/tests/: core.py  factories.py  test_eia860.py
scripts/: check_playwright_installation.sh  detect_timeouts.py  install_github_lfs.sh  make_github_notification.py  make_markdown_notification.py  make_slack_notification_message.py  make_zulip_notification_message.py  run-unit-tests.sh
src/pudl_archiver/: __init__.py  checkpoints.py  cli.py  frictionless.py  orchestrator.py  utils.py
src/pudl_archiver/archiver/: __init__.py  censusdp1tract.py  classes.py  eia860.py  eia860m.py  eia861.py  eia923.py  eia_bulk_elec.py  epacems.py  epacmd_eia.py
src/pudl_archiver/archiver/ferc/: ferc1.py  ferc2.py  ferc6.py  ferc60.py  ferc714.py  xbrl.py
src/pudl_archiver/archivers/: censusdp1tract.py  censusfips.py  censuspep.py  classes.py  doeiraec.py  doelead.py  eia176.py  eia191.py  eia757a.py  eia860.py  eia860m.py  eia861.py  eia923.py  eia_bulk_elec.py  eiawater.py  epacamd_eia.py  epacems.py  epaegrid.py  epapcap.py  gridpathratoolkit.py  msha.py  mshamines.py  nrelatb.py  nrelcambium.py  nrelefs.py  nrelss.py  phmsagas.py  sec10k.py  usgsuspvdb.py  usgsuswtdb.py  validate.py  vcerare.py  vceregen.py
src/pudl_archiver/archivers/census/: __init__.py  censuspep.py
src/pudl_archiver/archivers/doe/: doeiraec.py
src/pudl_archiver/archivers/eia/: __init__.py  eia176.py  eia191.py  eia757a.py  eia860.py  eia860m.py  eia861.py  eia923.py  eia930.py  eia_bulk.py  eia_bulk_elec.py  eiaaeo.py  eiaapi.py  eiabluesky.py  eiacbecs.py  eiamecs.py  eianems.py  eiarecs.py  eiasteo.py  eiawater.py  mecs.py  naturalgas.py  nrelatb.py
src/pudl_archiver/archivers/epa/: __init__.py  epacamd_eia.py  epacems.py  epaegrid.py  epamats.py  epapcap.py
src/pudl_archiver/archivers/ferc/: __init__.py  ferc1.py  ferc2.py  ferc6.py  ferc60.py  ferc714.py  ferc_online_helpers.py  ferccid.py  ferceqr.py  xbrl.py
src/pudl_archiver/archivers/nrel/: __init__.py  nrelatb.py  nrelcambium.py  nrelefs.py  nrelsiting.py  nrelss.py  nrelsts.py  siting.py
src/pudl_archiver/archivers/rus/: __init__.py  rus12.py  rus7.py
src/pudl_archiver/archivers/usgs/: __init__.py  usgsuspvdb.py  usgsuswtdb.py
src/pudl_archiver/depositors/: __init__.py  depositor.py  fsspec.py  gcs.py  zenodo.py
src/pudl_archiver/depositors/zenodo/: __init__.py  depositor.py  entities.py
src/pudl_archiver/metadata/: __init__.py  constants.py  nrelcambium.py  pudl.py  sources.py
src/pudl_archiver/package_data/: __init__.py  zenodo_doi.yaml
src/pudl_archiver/zenodo/: api_client.py  entities.py
src/pudl_scrapers/: __init__.py  archiver.py  cli.py  frictionless.py  helpers.py  items.py  middlewares.py  pipelines.py  settings.py  zenodo_interface.py
src/pudl_scrapers/archiver/: censusdp1tract.py  censussp1tract.py  classes.py  eia_bulk_elec.py  epacems.py  epacmd_eia.py  ferc1.py  ferc6.py  ferc60.py
src/pudl_scrapers/archiver/eia/: eia860.py  eia860m.py  eia861.py  eia923.py
src/pudl_scrapers/archiver/ferc/: ferc1.py  ferc2.py  ferc6.py  ferc60.py  ferc714.py  xbrl.py
src/pudl_scrapers/spiders/: __init__.py  censusdp1tract.py  eia860.py  eia860m.py  eia861.py  eia923.py  epacamd_eia.py  epacems_unitid_eia_plant_crosswalk.py  ferc1.py  ferc2.py  ferc6.py  ferc60.py  ferc714.py
src/pudl_scrapers/zenodo/: api_client.py  entities.py
tests/: __init__.py  archive_base_test.py  conftest.py  eia860_test.py  eia860m_test.py  eia861_test.py  eia923_test.py  epacems_test.py  factories.py  ferc1_test.py  ferc_xbrl_test.py  frictionless_test.py  zenodo_test.py
tests/data/: eia860.html  eia923.html  ferc_rssfeed.atom
tests/fixtures/: datapackage.json
tests/integration/: cli_test.py  fsspec_depositor_test.py  xbrl_archive_test.py  zenodo_depositor_test.py  zenodo_test.py
tests/unit/: archive_base_test.py  archive_validate_test.py  conftest.py  eia_archiver_test.py  eiawater_test.py  epacems_archiver_test.py  ferc_archiver_test.py  frictionless_test.py  pudl_archiver_test.py  utils_test.py  xbrl_test.py  zenodo_api_test.py  zenodo_entities_test.py
