[project]
name = "pudl_archiver"
version = "0.2.0"
authors = [{ name = "Catalyst Cooperative", email = "pudl@catalyst.coop" }]
requires-python = ">=3.13"
license = { file = "LICENSE.txt" }
readme = { file = "README.md", content-type = "text/markdown" }

[project.scripts]
pudl_archiver = "pudl_archiver.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.doc8]
max-line-length = 88
ignore-path = ["docs/_build"]

[tool.pytest]
minversion = "9.0"
testpaths = ["./"]
filterwarnings = [
  "ignore:distutils Version classes are deprecated:DeprecationWarning",
  "ignore:Creating a LegacyVersion:DeprecationWarning:pkg_resources[.*]",
]
addopts = ["--verbose"]
log_format = "%(asctime)s [%(levelname)8s] %(name)s:%(lineno)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_cli_level = "INFO"
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "IGNORE_EXCEPTION_DETAIL",
  "ELLIPSIS",
]
asyncio_mode = "auto"

[tool.ruff]
# Assume Python 3.13
target-version = "py313"
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
  "A", # flake8-builtins
  # "ARG", # unused arguments
  # "B",  # flake8-bugbear
  "C",   # Limit cyclomatic complexity using mccabe
  "D",   # pydocstyle errors
  "E",   # pycodestyle errors
  "EXE", # executable file issues
  # "ERA", # eradicate: find commented out code
  "F",   # pyflakes
  "I",   # isort
  "ISC", # implicit string concatenation
  "N",   # pep8-naming
  "NPY", # NumPy specific checks
  "PD",  # pandas checks
  "PGH", # pygrep-hooks
  # "PL",  # pylint
  # "PT",  # pytest style
  "PTH", # use pathlib
  "Q",   # flake8-quotes
  "RET", # check return values
  "RSE", # unnecessary parenthises on raised exceptions
  "S",   # flake8-bandit
  "SIM", # flake8-simplify
  # "T",   # print statements found
  "UP", # pyupgrade (use modern python syntax)
  "W",  # pycodestyle warnings
]

ignore = [
  "D401",   # Require imperative mood in docstrings.
  "D417",
  "E501",   # Overlong lines.
  "E203",   # Space before ':' (black recommends to ignore)
  "PD003",  # Use of isna rather than isnull
  "PD004",  # Use of notna rather than notnull
  "PD008",  # Use of df.at[] rather than df.loc[]
  "PD010",  # Use of df.stack()
  "PD013",  # Use of df.unstack()
  "PD015",  # Use of pd.merge() rather than df.merge()
  "RET504", # Ignore unnecessary assignment before return
  "S101",   # Use of assert
]

# Don't automatically concatenate strings -- sometimes we forget a comma!
unfixable = ["ISC"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports
"tests/*" = ["D"]

[tool.ruff.lint.pep8-naming]
# Allow Pydantic's `@validator` decorator to trigger class method treatment.
classmethod-decorators = ["pydantic.validator", "pydantic.root_validator"]

[tool.ruff.lint.isort]
known-first-party = ["ferc_xbrl_extractor"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64"]
channel-priority = "strict"
preview = ["pixi-build"]

[tool.pixi.pypi-dependencies]
pudl_archiver = { path = ".", editable = true }
# furo version on conda-forge is very out of date and it is pure python.
furo = ">=2025.12.19, <2026"
# semantic-version is not available on conda-forge.
semantic-version = ">=2.10.0, <3"
# Something about the pixi activation script doesn't work when it's installed from conda-forge.
playwright = ">=1.57.0, <2"

[tool.pixi.environments]
default = { solve-group = "default" }

[tool.pixi.tasks]
pre-commit-install = { cmd = "pre-commit install", description = "Install git pre-commit hooks" }
pre-commit-run = { cmd = """
pre-commit run --all-files --show-diff-on-failure check-merge-conflict; \
pre-commit run --all-files --show-diff-on-failure check-yaml; \
pre-commit run --all-files --show-diff-on-failure check-case-conflict; \
pre-commit run --all-files --show-diff-on-failure debug-statements; \
pre-commit run --all-files --show-diff-on-failure name-tests-test; \
pre-commit run --all-files taplo-format
""", description = "Run selected pre-commit hooks" }
pre-commit-autoupdate = { cmd = "pre-commit autoupdate", description = "Update all pre-commit hooks" }
ruff = { cmd = "ruff check ./", description = "Run ruff linter" }
unit = { cmd = """
pytest \
    --cov-append \
    --cov=src/pudl_archiver \
    --cov-report=xml \
    --doctest-modules \
    src/pudl_archiver tests/unit
""", description = "Run unit tests with coverage" }
integration = { cmd = """
pytest \
    --cov-append \
    --cov=src/pudl_archiver \
    --cov-report=xml \
    --doctest-modules \
    tests/integration
""", description = "Run integration tests with coverage" }
coverage = { cmd = "coverage report --sort=cover", description = "Report test coverage" }
lint = { depends-on = [
  "ruff",
  "pre-commit-run",
], description = "Run all linters" }
ci = { depends-on = [
  "lint",
  "unit",
  "integration",
  "coverage",
], description = "Run full CI suite" }

[tool.pixi.dependencies]
aiohttp = ">=3.13.3,<4"
arelle-release = ">=2.38.4,<3"
beautifulsoup4 = ">=4.14.3,<5"
# Install PUDL as a conda package from git:
"catalystcoop.pudl" = { git = "https://github.com/catalyst-cooperative/pudl.git" }
# Install PUDL from a local directory for convenience during development:
# "catalystcoop.pudl" = { path = "../pudl" }
cfgv = ">=3.5.0,<4"
coloredlogs = ">=14.0,<15"
coverage = ">=7.13.1,<8"
dask = ">=2026.1.1,<2027"
deltalake = ">=1.3.2,<2"
doc8 = ">=2.0.0,<3"
feedparser = ">=6.0.12,<7"
frictionless = ">=5.18.1,<6"
numba = ">=0.63.1,<0.64"
numpy = ">=2.3.5,<3"
pandas = ">=2.3.3,<3"
pre-commit = ">=4.5.1,<5"
psycopg2-binary = ">=2.9.10,<3"
pyarrow = ">=20.0.0,<21"
pydantic = ">=2.12.5,<3"
pydocstyle = ">=6.3.0,<7"
pytest = ">=9.0.2,<10"
pytest-asyncio = ">=1.3.0,<2"
pytest-console-scripts = ">=1.4.1,<2"
pytest-cov = ">=7.0.0,<8"
pytest-mock = ">=3.15.1,<4"
python-dotenv = ">=1.2.1,<2"
pyyaml = ">=6.0.3,<7"
ruff = ">=0.14.13,<0.15"
sphinx = ">=9.1.0,<10"
sphinx-autoapi = ">=3.6.1,<4"
sphinx-issues = ">=5.0.1,<6"
tqdm = ">=4.67.1,<5"
types-requests = ">=2.32.4.20260107,<3"
pyproj = ">=3.7.2,<4"

[tool.pixi.activation]
scripts = ["scripts/check_playwright_installation.sh"]
